--- a/index.html
+++ b/index.html
@@ -388,10 +388,10 @@
             // Atualiza o texto de idioma selecionado
             if (language === 'pt-br') {
               selectedLanguageText.textContent = 'PT-BR'; // Mostra 'PT-BR'
-              window.location.href = 'index.html'; // Redireciona para o português
+              window.location.href = 'index'; // Redireciona para o português
             } else if (language === 'en') {
               selectedLanguageText.textContent = 'EN'; // Mostra 'EN'
-              window.location.href = 'en.html'; // Redireciona para o inglês
+              window.location.href = 'en'; // Redireciona para o inglês
             }
     
             // Fecha o dropdown após a seleção
