--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
                 <div class="current-language">
                     <img src="./src/assets/language.svg" alt="Language" class="language-flag" />
                     <img src="./src/assets/togle.svg" alt="Language" class="language-flag" />
-                    <span id="selected-language">PT-BR</span>
+                    <span id="selected-language"></span>
+                    <ul class="language-dropdown">
+                      <li data-language="pt-br">
+                          <img src="./src/assets/icons8-brasil-emoji-48.png" alt="Brazilian Flag" class="language-flag" />
+                          <span></span> 
+                      </li>
+                      <li data-language="en">
+                          <img src="./src/assets/icons8-emoji-reino-unido-48.png" alt="English Flag" class="language-flag" />
+                          <span></span> 
+                      </li>
+                  </ul>
+              </div>
                 </div>
-                <ul class="language-dropdown">
-                    <li data-language="pt-br">
-                        <img src="./src/assets/icons8-brasil-emoji-48.png" alt="Brazilian Flag" class="language-flag" />
-                        <span></span> 
-                    </li>
-                    <li data-language="en">
-                        <img src="./src/assets/icons8-emoji-reino-unido-48.png" alt="English Flag" class="language-flag" />
-                        <span></span> 
-                    </li>
-                </ul>
-            </div>
               <div class="navbar__mobile">
                 <img src="./src/assets/menu.svg" alt="menu" class="burguer"/>
                 <ul class="mobile__links">
@@ -57,6 +57,17 @@
                     <li><a href="#Projetos">Projetos</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contato">Contato</a></li>
+                    <ul class="language-dropdown">
+                      <li data-language="pt-br">
+                          <img src="./src/assets/icons8-brasil-emoji-48.png" alt="Brazilian Flag" class="language-flag" />
+                          <span></span> 
+                      </li>
+                      <li data-language="en">
+                          <img src="./src/assets/icons8-emoji-reino-unido-48.png" alt="English Flag" class="language-flag" />
+                          <span></span> 
+                      </li>
+                  </ul>
+              </div>
                 </ul>
               </div>
             </div>
