--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
             // Atualiza o texto de idioma selecionado
             if (language === 'pt-br') {
               selectedLanguageText.textContent = 'PT-BR'; 
-              window.location.href = 'index.html'; 
+              window.location.href = '/'; 
             } else if (language === 'en') {
               selectedLanguageText.textContent = 'EN'; 
               window.location.href = 'en';
