--- a/en.html
+++ b/en.html
@@ -437,7 +437,7 @@
        
             if (language === 'pt-br') {
               selectedLanguageText.textContent = 'PT-BR'; 
-              window.location.href = 'index.html'; 
+              window.location.href = '/'; 
             } else if (language === 'en') {
               selectedLanguageText.textContent = 'EN'; 
               window.location.href = 'en';
