Added email to contact

--- a/es.html
+++ b/es.html
@@ -375,6 +375,14 @@
           </div>
         </div>
 
+        <div class="contact">
+          <h1 class="sobremim-title">Email</h1>
+          <div id="custom-alert" class="custom-alert hidden">
+            <p id="copied-email-text">E-mail copiado: <span id="copied-email"></span></p>
+          </div>
+          <a href="#" class="copy-mail" data-email="contato@ryangustavo.site"><p>contato@ryangustavo.site</p></a>
+          <h9 class="click-to-copy">Haga clic para copiar</h9>
+          </div>
           </section>
 
           <footer id="footer">
