--- a/en.html
+++ b/en.html
@@ -376,6 +376,14 @@
               </div>
           </div>
         </div>
+        <div class="contact">
+          <h1 class="sobremim-title">Email</h1>
+          <div id="custom-alert" class="custom-alert hidden">
+            <p id="copied-email-text">Email copied: <span id="copied-email"></span></p>
+          </div>
+          <a href="#" class="copy-mail" data-email="contato@ryangustavo.site"><p>contato@ryangustavo.site</p></a>
+          <h9 class="click-to-copy">Click to copy</h9>
+          </div>
 
           </section>
 
