Added a linkedin redirect

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                   <a href="https://www.instagram.com/ryanzin.dev/" target="_blank" class="contact-button instagram">
                       <i class="fab fa-instagram"></i> <img src="./src/assets/iconmonstr-instagram-11.svg" alt="insta_redirect" />
                   </a>
-                  <a href="" target="_blank" class="contact-button linkedin">
+                  <a href="https://www.linkedin.com/in/ryan-gustavo-609246329" target="_blank" class="contact-button linkedin">
                       <i class="fab fa-linkedin"></i> <img src="./src/assets/icons8-linkedin.svg" alt="linkedin_redirect" />
                   </a>
               </div>
