--- a/en.html
+++ b/en.html
@@ -416,7 +416,7 @@
        
              // Redirecionar o usuário para a página do idioma selecionado
              if (language === "pt-br") {
-               window.location.href = "";
+               window.location.href = "/";
              } else if (language === "en") {
                window.location.href = "en";
              } else if (language === "es") {
