--- a/en.html
+++ b/en.html
@@ -399,6 +399,7 @@
 
       <script src="./src/script/navbar.js"></script>
       <script src="./src/script/language.js"></script>
+      <script src="./src/script/copy-mail.js"></script>
       <script>
         document.addEventListener("DOMContentLoaded", () => {
          const currentLanguage = document.querySelector(".current-language");
